--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.0",
+    "next-auth": "^4.24.7",
     "npm": "^10.5.2",
     "react": "^18",
     "react-dom": "^18",
