--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123v@localhost:5432/users_db?schema=public"
+DATABASE_URL="postgresql://localhost:5432/postgres?schema=public"
 
 NEXTAUTH_URL=http://110.74.194.123:8989/api/todo/v1
 NEXTAUTH_SECRET = "randomsecret"
